--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2' // for logging API calls to LogCat
     implementation 'com.github.parse-community.Parse-SDK-Android:parse:4.0.0'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 }
