--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:theme="@style/Theme.Finstagram"
         tools:targetApi="31">
         <activity
-            android:name=".Activities.ProfilePicture"
+            android:name=".Activities.ProfilePictureActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.SignUpActivity"
